# fastapi_

./: .env  .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  api.py  config.py
app/middlewares/: audit_log.py  user_info.py
app/model/: auth.py  product.py  user.py
app/routes/: user.py
app/utils/: audit_log.py  authentication.py  current_user.py  query.py
logs/: app.log.2022-11-29  app.log.2022-12-23  app.log.2022-12-27  app.log.2022-12-29  users.log.2022-12-23  users.log.2022-12-26  users.log.2022-12-29
tests/: .gitignore
